test_cases/negative/no_return.snek
def Double(value) {}

export DEFAULT = Double(10);
